# cloud-tools

./: .gitignore  README.md  TODO.md  mypy.ini  proposal.md  pyproject.toml  update_imports.py
backend/: .env.example  README.md  main.py  mypy.ini  requirements.txt  run.py  setup.sh
backend/api/: auth.py  scripts.py  tools.py
backend/core/: config.py
backend/core/docs/: scripts.py
backend/core/schemas/: script.py
backend/core/types/: api.py  sqlalchemy.py
backend/core/utils/: type_helpers.py
backend/db/: base.py  session.py
backend/db/models/: account.py  execution.py  script.py  types.py
backend/db/seeds/: tool_disk_checker.py
backend/providers/aws/: __init__.py
backend/providers/linux/: __init__.py
docs/: deployment.md  environment_configuration.md
frontend/: README.md  app.py  package-lock.json  package.json
frontend/src/pages/: _app.tsx
frontend/src/types/: aws.ts
frontend/templates/: base.html
infra/: README.md
tests/: conftest.py  run_api_test.sh  run_credential_tests.py  run_no_reload.py  test_auth_api.py
tests/integration/: refresh_credentials.py  test_api_real_world.py  test_api_with_testclient.py  test_auth_api.py  test_credential_refresh.py  test_executions_api.py
tests/integration/core/: test_scripts_api.py
tests/unit/: test_account_manager.py  test_api_executions.py  test_api_scripts.py  test_api_types.py  test_aws_credentials.py  test_aws_types.py  test_credential_manager.py  test_credential_refresh.py  test_db_model_types.py  test_ec2_manager.py  test_org_visitor.py  test_sqlalchemy_types.py  test_ssm_executor.py
(+28 files in other folders)
